[package]
name = "miaostay-cdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
job_scheduler = "1.2.1"
log4rs = "1.2.0"
warp = "0.3.5"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.104"
serde = "1.0.182"
reqwest = "0.11.18"
webp = "0.2.5"
lazy_static = "1.4.0"
toml = "0.7.6"
config = "0.13.3"
base64 = "0.21.2"
user-agent-parser = "0.3.4"
axum = "0.6.20"
